# fy_detect

./: start_detect.sh  start_detect_bearing.sh
custom_msgs/msg/: TargetCoordinate.msg
py_yolov8/launch/: yolov8.launch  yolov8_drone.launch
py_yolov8/src/: img_saver.py  py_yolov8.py
py_yolov8/src/to_czd/: coord.txt
target_dist_calculator/: CMakeLists.txt  package.xml
target_dist_calculator/config/: detect.rviz  mid_drone.yaml  mid_rs_drone.yaml
target_dist_calculator/launch/: target_bearing.launch  target_dist.launch  target_dist_cluster.launch
target_dist_calculator/src/: depth2pc.py  image_splitter_node.cpp  odom_trans.cpp  target_bearing_node.cpp  target_dist_cluster_node.cpp  target_dist_node .py.backup_6_21  target_dist_node.cpp  target_dist_node.py  vis_detectout.py
